# crypto-trading-platform

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  alembic.ini  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20241221_0001_initial_schema.py  20241221_0002_alternative_data_tables.py  20241222_0003_stablecoin_supply_table.py
config/: CONFIG_SCHEMA.md  backtests.yaml  creative_testing.yaml  exchanges.yaml  optimization.yaml  paper_trading.yaml  settings.yaml  strategies.yaml
notes/: 01-first-back-tests.md  PORTFOLIO_SUMMARY.md  STRATEGY_MAP.md
plugins/: __init__.py
scripts/: backtest_ml_siblings.py  backtest_ratio_universe.py  backtest_tier2_strategies.py  backtest_top20.py  check_db_stats.py  dashboard.py  feature_importance.py  generate_research_report.py  grid_search_final.py  grid_search_hyperparams.py  grid_search_orthogonal.py  grid_search_risk.py  grid_search_validated.py  ingest_alternative_data.py  ingest_tier2_data.py  out_of_sample_test.py  populate_history.py  quick_validate.py  reoptimize_deployed_ratios.py  run_all_strategies.py  run_creative_testing.py  run_diversification_testing.py  run_full_validation.py  run_hypercreative_testing.py  run_multi_paper_trading.py  run_orthogonal_testing.py  run_paper_trading.py  run_phase2_full.py  run_unexplored_testing.py  run_with_dashboard.py  screen_ratio_pairs.py  test_db_connection.py  validate_strategies.py  walk_forward_ratio_strategies.py  walk_forward_validation.py
src/crypto/: __init__.py  (+1 more)
tests/: conftest.py  test_backtesting.py  test_config.py  test_core_types.py  test_indicators.py  test_main.py  test_registry.py  test_strategies.py
(+139 files in other folders)
