[project]
name = "crypto"
version = "0.1.0"
description = "A config-first, extensible cryptocurrency trading platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Binance API
    "python-binance>=1.0.19",
    "httpx>=0.27.0",
    "websockets>=12.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    
    # Machine learning
    "scikit-learn>=1.4.0",
    
    # Configuration
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    
    # CLI
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
rl = [
    # Reinforcement Learning dependencies
    "stable-baselines3>=2.0.0",
    "gymnasium>=0.29.0",
]
all = [
    "crypto[dev,rl]",
]

[project.scripts]
crypto = "crypto.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
